# MU4MA016_Students

./: .gitignore  README.md  hello.c
ADrieux/: CMakeLists.txt  readfile.c  triangle_Pascal.c~
ADrieux/CC1/: dijkstra.c  graph.c  graph.h
ADrieux/MU4MA053/: LU.jl  Projet_final.jl  gradient_methods.jl  iterative_methods.jl
ADrieux/TP0/: hello.c  readfile2.c
ADrieux/TP1/: CMakeLists.txt  bubble_data.txt  bubble_sort.c  graph.p  insertion  insertion_sort.c  merge  merge_sort.c  test_queue
ADrieux/TP2/: mesh2D.c  mesh2D.h
ADrieux/TP3/: hashtable.c
ADrieux/TP4/: heap_priority_queue.c  heap_priority_queue.h
BLOMSTRAND/tp0/: hello.c  read_file.c  write.c
BURSKENS/: hello.cpp
Burns/: circular_buffer.c  test_queue
Burns/src/: circ_buffV2.c  circular_buffer.c  test_queue.c
CC1/: graph.h
CC1/data/: gr1.dta
Devora/TP1/: CMakeLists.txt
Devora/TP1/include/: circular_buffer_queue.h  sorting.h
Devora/TP1/src/: circular_buffer_queue.c  sorting.c  test_queue.c  test_sorting.c
Devora/TP2/: CMakeLists.txt  tp2.tex
EE/: read_file.c  text.txt  triangle.c
EE/CC1/: dijkstra.c  graph.c  graph.h
EE/TP0/: CMakeLists.txt  hello.c  readfile.c  triangle  triangle.c  triangle.c~
EE/TP1/: CMakeLists.txt  data.txt  (+2 more)
Gantz/: CMakeLists.txt  hello.c  read_file.c
Gantz/CC1/: CMakeLists.txt  dijkstra.c  dijkstra.h  graph.c  graph.h  main.c
Gantz/TP4/: CMakeLists.txt
Gantz/TP4/include/: avl_trees.h  priority_queue.h
Gantz/TP4/src/: avl_trees.c  main.c  priority_queue.c
HUN/: CMakeLists.txt  a.out  ex3.c  ex4.1.c  ex4.2.c
IRF/: CMakeLists.txt  hello  test.txt  triangle.c~
JMarxen/TP2_and_TP3/mesh_project/: CMakeLists.txt  gnu_plot.txt
JMarxen/TP2_and_TP3/mesh_project/include/: mesh_2D.h  mesh_3D.h
JMarxen/TP2_and_TP3/mesh_project/src/: hash_tables.c  mesh_2D.c  mesh_3D.c  test_2D.c  test_3D.c  tp3.c
NARANJO/: CMakeLists.txt~  Makefile  cmake_install.cmake  pascal.c~
Paxton/: CMakeLists.txt  PascalsTri.c  hello.c  triangular_meshes.c
Projects/: projects-2025.tex
Students/KESSLER/tp1/: .gitignore  CMakeLists.txt  cppqueue  plot_script.gnu  queue  sorting
Students/KESSLER/tp1/include/: bubblesort.h  circular_buffer_queue.hpp  insertionsort.h  mergesort.h
Students/KESSLER/tp1/src/: bubblesort.c  circular_buffer_queue.c  insertionsort.c  mergesort.c  test_cppqueue.cpp  test_queue.c  test_sorting_algorithms.c
TP0/: tp0.tex
TP1/: tp1.tex
YAN/: CMakeLists.txt  hello.c  pascal.c  pascal2.c  test_merge  test_mesh  test_queue
(+859 files in other folders)
